-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.0
-
None
-
-
024f595d111ddb20d00436001e06fa83f61ff904
make produces the following error trying to compile on mac from source
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -c -pipe -g -gdwarf-2 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk -std=c++11 -stdlib=libc++ -mmacosx-version-min=10.7 -fvisibility=hidden -fvisibility-inlines-hidden -Wall -W -DQT_NO_LIBUDEV -DQT_NO_EVDEV -DQT_NO_XCB -DQT_NO_XKBCOMMON -DQT_NO_USING_NAMESPACE -DQT_BUILD_WIDGETS_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_STYLE_WINDOWS -DQT_NO_STYLE_WINDOWSVISTA -DQT_NO_STYLE_WINDOWSXP -DQT_NO_STYLE_GTK -DQT_NO_STYLE_WINDOWSCE -DQT_NO_STYLE_WINDOWSMOBILE -DQT_NO_STYLE_ANDROID -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_GUI_LIB -DQT_CORE_LIB -I../../mkspecs/macx-clang -I. -I../../include -I../../include/QtWidgets -I../../include/QtWidgets/5.1.0 -I../../include/QtWidgets/5.1.0/QtWidgets -Idialogs -I.uic/debug-shared -I../../include/QtGui -I../../include/QtGui/5.1.0 -I../../include/QtGui/5.1.0/QtGui -I../../include/QtCore -I../../include/QtCore/5.1.0 -I../../include/QtCore/5.1.0/QtCore -I.moc/debug-shared -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk/System/Library/Frameworks/OpenGL.framework/Versions/A/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk/System/Library/Frameworks/AGL.framework/Headers styles/qmacstyle_mac.mm -o .obj/debug-shared/qmacstyle_mac.o styles/qmacstyle_mac.mm:2725:39: error: no member named 'hasAncestor' in namespace 'QStyleHelper' (opt && QStyleHelper::hasAncestor(opt->styleObject,... ~~~~~~~~~~~~~~^ styles/qmacstyle_mac.mm:2725:69: error: use of undeclared identifier 'QAccessible' ...&& QStyleHelper::hasAncestor(opt->styleObject, QAccessible::ScrollBar)))... ^ styles/qmacstyle_mac.mm:3369:31: error: no member named 'hasAncestor' in namespace 'QStyleHelper' ...if (QStyleHelper::hasAncestor(opt->styleObject, QAccessible::ToolBar)) { ~~~~~~~~~~~~~~^ styles/qmacstyle_mac.mm:3369:61: error: use of undeclared identifier 'QAccessible' ...if (QStyleHelper::hasAncestor(opt->styleObject, QAccessible::ToolBar)) { ^ styles/qmacstyle_mac.mm:5404:31: error: no member named 'hasAncestor' in namespace 'QStyleHelper' ...if (QStyleHelper::hasAncestor(opt->styleObject, QAccessible::ToolBar)) { ~~~~~~~~~~~~~~^ styles/qmacstyle_mac.mm:5404:61: error: use of undeclared identifier 'QAccessible' ...if (QStyleHelper::hasAncestor(opt->styleObject, QAccessible::ToolBar)) { ^ styles/qmacstyle_mac.mm:6005:55: error: no member named 'hasAncestor' in namespace 'QStyleHelper' ...&& !QStyleHelper::hasAncestor(opt->styleObject, QAccessible::ToolBar)) { ~~~~~~~~~~~~~~^ styles/qmacstyle_mac.mm:6005:85: error: use of undeclared identifier 'QAccessible' ...&& !QStyleHelper::hasAncestor(opt->styleObject, QAccessible::ToolBar)) { ^ 8 errors generated. make[4]: *** [.obj/debug-shared/qmacstyle_mac.o] Error 1 make[3]: *** [debug-all] Error 2 make[2]: *** [sub-widgets-make_first] Error 2 make[1]: *** [sub-src-make_first] Error 2 make: *** [module-qtbase-make_first] Error 2
- is duplicated by
-
QTBUG-36537 Unable to compile Qt with '-no-accessibility' option on Mac
-
- Closed
-
- resulted in
-
QTQAINFRA-710 Add -no-accessibility to an existing configuration in the Qt Project CI system
-
- Closed
-
For Gerrit Dashboard: QTBUG-32551 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
97705,2 | Build with -no-accessibility on OS X | dev | qt/qtbase | Status: MERGED | +2 | 0 |